added table view on home page and links to card pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,17 +16,19 @@
  .erd {
     font-family: "Courier New", Courier, monospace;
     white-space: pre;
-    background-color: #f4f4f4;
+    background-color: #ebebeb;
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px black solid;
+    border-radius: 5px;
     margin: 20px;
     width: 50%;
 }
 
 nav {
-    background-color: lightgrey;
+    background-color: #ebebeb;
     padding: 10px;
+    border: 1px black solid;
+    border-radius: 5px;
 }
 
 .menu {
