added search, but it's not quite working properly yet

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Product Details</h2>
+<h2><%= @product.title %> Details</h2>
 <p><strong>Product ID:</strong> <%= @product.product_id %></p>
 <p><strong>Title:</strong> <%= @product.title %></p>
 <p><strong>Category:</strong> <%= @product.category.name if @product.category %></p>
