--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Cards</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>CardsApplication</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", media: 'all', "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+</head>
 
-  <body>
-    <header>
-      <nav>
-      <ul class="menu">
-          <li><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'About', about_path %></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <nav>
+      <%= link_to 'Home', products_path %> |
+      <%= link_to 'About', about_path %>
+    </nav>
+  </header>
 
-    <%= yield %>
-
-  </body>
+  <%= yield %>
+</body>
 </html>
