--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,22 @@
 <h1>Welcome to Lorcana Database</h1>
 <h2>Cards</h2>
+
+<%= form_with url: search_products_path, method: :get, local: true do %>
+  <div>
+    <%= label_tag :search, 'Search for products:' %>
+    <%= text_field_tag :search, params[:search] %>
+  </div>
+
+  <div>
+    <%= label_tag :category_id, 'Filter by category:' %>
+    <%= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name, params[:category_id]), include_blank: true %>
+  </div>
+
+  <div>
+    <%= submit_tag 'Search' %>
+  </div>
+<% end %>
+
 <table>
   <thead>
     <tr>
