search doesn't work but there's a page not found page now.. shrugs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 
   <div>
     <%= submit_tag 'Search' %>
-  </div>
+  </div><br>
 <% end %>
 
 <table>
@@ -34,6 +34,6 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table><br>
 
 <%= paginate @products %>
