--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,16 +5,16 @@
   <div>
     <%= label_tag :search, 'Search for products:' %>
     <%= text_field_tag :search, params[:search] %>
-  </div>
+  </div><br>
 
   <div>
     <%= label_tag :category_id, 'Filter by category:' %>
     <%= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name, params[:category_id]), include_blank: true %>
-  </div>
+  </div><br>
 
   <div>
     <%= submit_tag 'Search' %>
-  </div>
+  </div><br>
 <% end %>
 
 <table>
@@ -34,6 +34,6 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table><br>
 
 <%= paginate @products %>
